<resources>
    <string name="app_name">LOGIN APP</string>
    <string name="login_header">LOGIN PAGE</string>
    <!-- Strings related to login -->
    <string name="login_id">Input your ID</string>
    <string name="login_password">********</string>
    <string name="login_submit">LOGIN</string>
    <string name="find_password">find password</string>
    <string name="sign_up">sign up</string>
    <string name="input_height">50sp</string>
    <string name="input_width">300sp</string>
    <string name="image_margin">25sp</string>


</resources>